backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/caio.dona/my-turn-app.git'
  name: my-turn-app-backend
  namespace: my-turn-app
  labels:
    app: my-turn-app-backend
    app.kubernetes.io/component: my-turn-app-backend
    app.kubernetes.io/instance: my-turn-app-backend
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: my-turn-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 10-SCL
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-turn-app-backend
  template:
    metadata:
      labels:
        app: my-turn-app-backend
        deploymentconfig: my-turn-app-backend
    spec:
      containers:
        - name: my-turn-app-backend
          image: quay.io/fmeneses/my-turn-app-backend:v1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
status:
