deployments.yaml
apiVersion: v1
kind: List
items:
- kind: DeploymentConfig
  apiVersion: apps.openshift.io/v1
  metadata:
    annotations:
      app.openshift.io/connects-to: backend
    name: frontend
    labels:
      app: frontend
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: frontend
      app.kubernetes.io/part-of: my-turn-app
      app.openshift.io/runtime: vuejs-over-nginx
  spec:
    replicas: 1
    selector:
      app: frontend
      deploymentconfig: frontend
    template:
      metadata:
        labels:
          app: frontend
          deploymentconfig: frontend
      spec:
        containers:
          - name: frontend
            image: ' '
            ports:
              - name: 8080-tcp
                containerPort: 8080
                protocol: TCP
            resources: {}
            readinessProbe:
              httpGet:
                path: /index.html
                port: 8080
                scheme: HTTP
              timeoutSeconds: 1
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
            livenessProbe:
              httpGet:
                path: /index.html
                port: 8080
                scheme: HTTP
              timeoutSeconds: 1
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
            imagePullPolicy: Always
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        securityContext: {}
        schedulerName: default-scheduler
    strategy:
      type: Rolling
    triggers: []
  status:
- kind: DeploymentConfig
  apiVersion: apps.openshift.io/v1
  metadata:
    name: backend
    labels:
      app: backend
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: backend
      app.kubernetes.io/part-of: my-turn-app
      app.openshift.io/runtime: nodejs
      app.openshift.io/runtime-version: 10-SCL
  spec:
    replicas: 1
    selector:
      app: backend
      deploymentconfig: backend
    template:
      metadata:
        labels:
          app: backend
          deploymentconfig: backend
      spec:
        containers:
          - name: backend
            readinessProbe:
              httpGet:
                path: /api
                port: 8080
                scheme: HTTP
              timeoutSeconds: 1
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
            livenessProbe:
              httpGet:
                path: /api
                port: 8080
                scheme: HTTP
              timeoutSeconds: 1
              periodSeconds: 10
              successThreshold: 1
              failureThreshold: 3
            image: ' '
            ports:
              - containerPort: 8080
                protocol: TCP
            resources: {}
            imagePullPolicy: Always
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        securityContext: {}
        schedulerName: default-scheduler
    strategy:
      type: Rolling
    triggers: []
  status:
