services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: my-turn-app-backend
  namespace: my-turn-app
  labels:
    app: my-turn-app-backend
    app.kubernetes.io/component: my-turn-app-backend
    app.kubernetes.io/instance: my-turn-app-backend
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: my-turn-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 10-SCL
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/caio.dona/my-turn-app.git'
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: my-turn-app-backend
    deploymentconfig: my-turn-app-backend
  type: ClusterIP
  sessionAffinity: None
status:
---
kind: Service
apiVersion: v1
metadata:
  name: my-turn-app-frontend
  namespace: my-turn-app
  labels:
    app: my-turn-app-frontend
    app.kubernetes.io/component: my-turn-app-frontend
    app.kubernetes.io/instance: my-turn-app-frontend
    app.kubernetes.io/part-of: my-turn-app
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: 'https://gitlab.com/caio.dona/my-turn-app.git'
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: my-turn-app-frontend
    deploymentconfig: my-turn-app-frontend
  type: ClusterIP
  sessionAffinity: None
status:
